--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,10 +11,10 @@
   <div id="user_header">
     <%if current_user %>
       Logged in as <%= current_user.email %>
-      <!--<%= link_to "Log Out", logout_path %>-->
+      <%= link_to "Log Out", logout_path %>
     <% else %>
-      <!--<%= link_to "Sign Up", signup_path %>-->
-      <!--<%= link_to "Log In", login_path %>-->
+      <%= link_to "Sign Up", signup_path %>
+      <%= link_to "Log In", login_path %>
     <% end %>
   </div>
   
