--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,19 +10,20 @@
   
   <div class="user_header">
     <%if current_user %>
-      <%= link_to "Home", page_index_path %>
-      <%= link_to "Usuário", users_path %>
-      <%= link_to "Locais", locals_path %>
-      <%= link_to "Carros", cars_path %>
-      <%= link_to "Clientes", customers_path %>
-      <%= link_to "Meio Pagamento", meio_pagamentos_path %>
-      <%= link_to "Vendedores", vendedors_path %>
-      <%= link_to "Banco", bancos_path %>
-      <%= link_to "Fichas", fichas_path %>
-      <%= link_to "Conta", conta_path %>
-      <%= link_to "NFVendas", nf_vendas_path %>
-      <%= link_to "Sair", logout_path %>
-      
+      <ul>
+        <li><%= link_to "Home", page_index_path %></li>
+        <li><%= link_to "Usuário", users_path %></li>
+        <li><%= link_to "Locais", locals_path %></li>
+        <li><%= link_to "Carros", cars_path %></li>
+        <li><%= link_to "Clientes", customers_path %></li>
+        <li><%= link_to "Meio Pagamento", meio_pagamentos_path %></li>
+        <li><%= link_to "Vendedores", vendedors_path %></li>
+        <li><%= link_to "Banco", bancos_path %></li>
+        <li><%= link_to "Fichas", fichas_path %></li>
+        <li><%= link_to "Conta", conta_path %></li>
+        <li><%= link_to "NFVendas", nf_vendas_path %></li>
+        <li><%= link_to "Sair", logout_path %></li>
+      </ul>
     <% end %>
   </div>
   
