--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -7,7 +7,7 @@
 
 <p>
   <strong>Local:</strong>
-  <%= @car.local %>
+  <%= @car.local.descricao %>
 </p>
 
 <p>
@@ -32,7 +32,7 @@
 
 <p>
   <strong>Andomodelo:</strong>
-  <%= @car.andomodelo %>
+  <%= @car.anomodelo %>
 </p>
 
 <p>
