--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
         <li><%= link_to "Fichas", fichas_path %></li>
         <li><%= link_to "Conta", conta_path %></li>
         <li><%= link_to "NFVendas", nf_vendas_path %></li>
-        <li><%= link_to "Sair", logout_path %></li>
+        <li id="sairButton"><%= link_to "Sair", logout_path %></li>
       </ul>
     <% end %>
   </div>
