--- a/app/views/conta/show.html.erb
+++ b/app/views/conta/show.html.erb
@@ -11,11 +11,6 @@
 </p>
 
 <p>
-  <strong>Valor:</strong>
-  <%= @contum.valor %>
-</p>
-
-<p>
   <strong>Ficha:</strong>
   <%= @contum.Ficha %>
 </p>
@@ -28,6 +23,16 @@
 <p>
   <strong>Historico:</strong>
   <%= @contum.historico %>
+</p>
+
+<p>
+  <strong>Datapagamento:</strong>
+  <%= @contum.datapagamento %>
+</p>
+
+<p>
+  <strong>Status:</strong>
+  <%= @contum.status %>
 </p>
 
 <%= link_to 'Edit', edit_contum_path(@contum) %> |
