--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -1,9 +1,10 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Carros</h1>
+<div class="header">
+  <h1>Carros</h1>
+</div>
 <table>
   <thead>
     <%= stylesheet_link_tag  'scaffolds', media: 'all', 'data-turbolinks-track' => true %>
+    <p id="notice"><%= notice %></p>
     <tr>
       <th>Status</th>
       <th>Local</th>
