--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -1,11 +1,11 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Clientes</h1>
-
+<div class="header">
+  <h1>Clientes</h1>
+</div>
 <table>
   <thead>
     <tr>
       <%= stylesheet_link_tag  'scaffolds', media: 'all', 'data-turbolinks-track' => true %>
+      <p id="notice"><%= notice %></p>
       <th>Nome</th>
       <th>Telefone</th>
       <th>Endereco</th>
