--- a/app/views/meio_pagamentos/index.html.erb
+++ b/app/views/meio_pagamentos/index.html.erb
@@ -1,10 +1,10 @@
-<p id="notice"><%= notice %></p>
-
+<div class="header">
 <h1>Meios de Pagamentos</h1>
-
+</div>
 <table>
   <thead>
     <%= stylesheet_link_tag  'scaffolds', media: 'all', 'data-turbolinks-track' => true %>
+    <p id="notice"><%= notice %></p>
     <tr>
       <th>Numparcelas</th>
       <th>Tipo</th>
