--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -1,7 +1,28 @@
+<!DOCTYPE html>
 <html>
-    <head></head>
-    
-    <body>
-    
-</body>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <%= stylesheet_link_tag  'page', media: 'all', 'data-turbolinks-track' => true %>
+  </head>
+<body>
+
+  <div class="header">
+    <h1>Empresa</h1>
+  </div>
+    <div class="row">
+    <div class="col-3 menu">
+    <ul>
+      <li>Menu Principal</li>
+      <li>Iniciar</li>
+      <li>Sobre</li>
+      <li>Sair</li>
+    </ul>
+  </div>
+      <div class="col-9">
+        <h1>Empresa</h1>
+        <p>Sua Empresa Sua Empresa Sua Empresa Sua Empresa Sua Empresa Sua Empresa Sua Empresa </p>
+        <p>Sua Empresa Sua Empresa Sua Empresa Sua Empresa Sua Empresa Sua Empresa Sua Empresa Sua Empresa .</p>
+      </div>
+    </div>
+  </body>
 </html>
