--- a/app/views/bancos/index.html.erb
+++ b/app/views/bancos/index.html.erb
@@ -1,10 +1,10 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Bancos</h1>
-
+<div class="header">
+  <h1>Bancos</h1>
+</div>
 <table>
   <thead>
     <%= stylesheet_link_tag  'scaffolds', media: 'all', 'data-turbolinks-track' => true %>
+    <p id="notice"><%= notice %></p>
     <tr>
       <th>Nome</th>
       <th colspan="3"></th>
@@ -12,6 +12,7 @@
   </thead>
 
   <tbody>
+
     <% @bancos.each do |banco| %>
       <tr>
         <td><%= banco.nome %></td>
