--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -47,3 +47,5 @@
 
 <%= link_to 'Edit', edit_car_path(@car) %> |
 <%= link_to 'Back', cars_path %>
+
+<%= link_to 'Gerar Ficha', new_ficha_path(carro: @car.id) %>
