--- a/app/views/locals/index.html.erb
+++ b/app/views/locals/index.html.erb
@@ -1,9 +1,10 @@
-<p id="notice"><%= notice %></p>
-
+<div class="header">
 <h1>Locais</h1>
+</div>
 <table>
   <thead>
     <%= stylesheet_link_tag  'scaffolds', media: 'all', 'data-turbolinks-track' => true %>
+    <p id="notice"><%= notice %></p>
     <tr>
       <th>Descricao</th>
       <th colspan="3"></th>
