--- a/app/views/nf_vendas/index.html.erb
+++ b/app/views/nf_vendas/index.html.erb
@@ -1,10 +1,10 @@
-<p id="notice"><%= notice %></p>
-
+<div class="header">
 <h1>Nf Vendas</h1>
-
+</div>
 <table>
   <thead>
     <%= stylesheet_link_tag  'scaffolds', media: 'all', 'data-turbolinks-track' => true %>
+    <p id="notice"><%= notice %></p>
     <tr>
       <th>Numerodocumento</th>
       <th>Valor</th>
@@ -14,7 +14,6 @@
       <th colspan="3"></th>
     </tr>
   </thead>
-
   <tbody>
     <% @nf_vendas.each do |nf_venda| %>
       <tr>
