--- a/app/views/vendedors/index.html.erb
+++ b/app/views/vendedors/index.html.erb
@@ -1,7 +1,7 @@
 <div class="header">
 <h1>Vendedores</h1>
 </div>
-<table>
+<table id="t01">
   <thead>
     <%= stylesheet_link_tag  'scaffolds', media: 'all', 'data-turbolinks-track' => true %>
     <p id="notice"><%= notice %></p>
