--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -1,7 +1,7 @@
 <div class="header">
   <h1>Clientes</h1>
 </div>
-<table>
+<table id="t01">
   <thead>
     <tr>
       <%= stylesheet_link_tag  'scaffolds', media: 'all', 'data-turbolinks-track' => true %>
