--- a/app/views/fichas/show.html.erb
+++ b/app/views/fichas/show.html.erb
@@ -7,12 +7,12 @@
 
 <p>
   <strong>Vendedor:</strong>
-  <%= @ficha.Vendedor.nome %>
+  <%= @ficha.Vendedor %>
 </p>
 
 <p>
   <strong>Banco:</strong>
-  <%= @ficha.Banco.nome %>
+  <%= @ficha.Banco %>
 </p>
 
 <p>
@@ -47,7 +47,7 @@
 
 <p>
   <strong>Customer:</strong>
-  <%= @ficha.Customer.nome %>
+  <%= @ficha.Customer %>
 </p>
 
 <p>
