--- a/app/views/bancos/new.html.erb
+++ b/app/views/bancos/new.html.erb
@@ -1,5 +1,17 @@
-<h1>New Banco</h1>
-
-<%= render 'form' %>
+<html>
+	<head>
+		<%= stylesheet_link_tag  'scaffolds', media: 'all', 'data-turbolinks-track' => true %>
+	</head>
+	<body>
+		<div class="header">
+			<h1>New Banco</h1>
+			</div>
+			
+			<%= render 'form' %>
 
 <%= link_to 'Back', bancos_path %>
+
+			
+			</body>
+			</html>
+
