--- a/app/views/customers/new.html.erb
+++ b/app/views/customers/new.html.erb
@@ -1,5 +1,12 @@
-<h1>New Customer</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', customers_path %>
+<html>
+	<head>
+		<%= stylesheet_link_tag  'scaffolds', media: 'all', 'data-turbolinks-track' => true %>
+	</head>
+	<body>
+		<div class="header">
+			<h1>New Customer</h1>
+		</div>
+	<%= render 'form' %>
+	<%= link_to 'Back', customers_path %>
+	</body>
+</html>
