--- a/app/views/fichas/new.html.erb
+++ b/app/views/fichas/new.html.erb
@@ -1,5 +1,14 @@
-<h1>New Ficha</h1>
+<html>
+	<head>
+		<%= stylesheet_link_tag  'scaffolds', media: 'all', 'data-turbolinks-track' => true %>
+	</head>
+	<body>
+		<div class="header">
+	<h1>New Ficha</h1>
+</div>
 
+	</body>
 <%= render 'form' %>
 
 <%= link_to 'Back', fichas_path %>
+</html>
