--- a/app/views/lancamentos/new.html.erb
+++ b/app/views/lancamentos/new.html.erb
@@ -1,5 +1,14 @@
-<h1>New Lancamento</h1>
+<html>
+	<head>
+		<%= stylesheet_link_tag  'scaffolds', media: 'all', 'data-turbolinks-track' => true %>
+	</head>
+	<body>
+		<div class="header">
+			<h1>New Lancamento</h1>
+			</div>
 
 <%= render 'form' %>
 
 <%= link_to 'Back', lancamentos_path %>
+</body>
+</html>
