--- a/app/views/meio_pagamentos/new.html.erb
+++ b/app/views/meio_pagamentos/new.html.erb
@@ -1,5 +1,12 @@
-<h1>New Meio Pagamento</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', meio_pagamentos_path %>
+<html>
+	<head>
+		<%= stylesheet_link_tag  'scaffolds', media: 'all', 'data-turbolinks-track' => true %>
+	</head>
+	<body>
+		<div class="header">
+			<h1>Novo Meio Pagamento</h1>
+		</div>
+		<%= render 'form' %>
+		<%= link_to 'Back', meio_pagamentos_path %>
+	</body>
+</html>
