--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -12,10 +12,10 @@
     <div class="row">
     <div class="col-3 menu">
     <ul>
-      <li>Menu Principal</li>
-      <li>Iniciar</li>
-      <li>Sobre</li>
-      <li>Sair</li>
+      <li>Facebook</li>
+      <li>Google</li>
+      <li>Linkedin</li>
+      <li>Email</li>
     </ul>
   </div>
       <div class="col-9">
